AFTER SUBMISSION FIXES: Bottom nav bar; properly aligned sections; still can't figure out how to moved the dashed line down.

--- a/css/index2.css
+++ b/css/index2.css
@@ -152,6 +152,9 @@ p {
   line-height: 1.4;
 }
 
+body{
+  background-color:black;
+}
 /* header{
     border: 4px solid red;
     display: flex;
@@ -161,6 +164,7 @@ p {
 } */
 .topnav {
   /* border: 4px solid red; */
+  background-color: white;
   width: 50%;
   margin-left: 25%;
   padding: 2%;
@@ -169,6 +173,7 @@ p {
   justify-content: space-evenly;
 }
 .topnav img {
+  background-color: white;
   padding: 0.5%;
 }
 .topnav img:hover {
@@ -189,8 +194,11 @@ p {
 }
 .headerImg {
   /* border: 4px solid blue; */
+  background-color: white;
+  width: 50%;
   display: flex;
   justify-content: center;
+  margin-left: 25%;
 }
 /* .container{
   width: 50%;
@@ -202,6 +210,7 @@ p {
   align-content: column;
 } */
 .section1 {
+  background-color: white;
   width: 50%;
   margin-left: 25%;
   padding: 2%;
@@ -212,22 +221,39 @@ p {
   font-size: 1.5rem;
 }
 .section2 {
+  /* border: 4px solid red; */
+  background-color: white;
   width: 50%;
   margin-left: 25%;
   padding: 2%;
   display: grid;
-  grid-template-columns: 200px 200px;
+  grid-template-columns: 400px 400px;
   text-align: center;
+  justify-content: center;
+  justify-content: space-evenly;
+}
+.section2 .strategy{
+  /* border: 4px solid orange; */
+  border-bottom: 1px dashed black;
+}
+ .section2 .Work{
+  /* border: 4px solid purple; */
+  border-bottom: 1px dashed black;
 }
 .section3 {
+  border: 4 px solid blue;
+  background-color: white;
   width: 50%;
   margin-left: 25%;
   padding: 2%;
   display: grid;
-  grid-template-columns: 200px 200px;
+  grid-template-columns: 400px 400px;
   text-align: center;
+  justify-content: center;
+  justify-content: space-evenly;
 }
 .section4 {
+  background-color: white;
   width: 50%;
   margin-left: 25%;
   padding: 2%;
@@ -239,18 +265,37 @@ p {
 .container a {
   text-decoration: none;
   border: 3px solid black;
-  padding: 3%;
-  border-radius: 5px;
+  padding: 1%;
+  border-radius: 8px;
   color: black;
   font-size: 1.5rem;
   margin-top: 2%;
 }
-footer nav a {
-  height: 100px;
+footer{
   width: 50%;
+  background-color:white;
+  display: flex;
   margin-left: 25%;
-  padding: 2%;
+  justify-content: center;
+}
+.bottomnav{
+  /* border: 4px solid red; */
+  width: 90%;
+  background-color: black;
   display: flex;
   justify-content: center;
   justify-content: space-evenly;
+  align-items: center;
+  padding: 20px 2%;
+}
+
+.bottomnav a {
+  color: white;
+  text-decoration: none;
+}
+.navlinks{
+  /* border: 4px solid yellow; */
+  width: 60%;
+  display: flex;
+  margin-right: 35%;
 }
